# subproc

./: .gitignore  Makefile  README  README.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml
subproc/: __init__.py  subproc.py  subproc2.py  writer.py
tests/: __init__.py  background_task.sh  consumer.py  echo_err.sh  producer.py  test_subproc.py  test_subproc2.py  test_subprocess.py
tests/scripts/: background_task.sh  content_pipe_sized.txt  echo_all.sh  echo_err.sh  producer.py
