[tool.poetry]
name = "subproc"
version = "0.0.1"
description = "Provides utility functions around subprocess module."
authors = ["Mustafa Caylak <mustafa.caylak@web.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
